--- a/mqtt_start-stop.css
+++ b/mqtt_start-stop.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
-*,
-*:before,
-*:after {
+*, *:before, *:after {
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
@@ -11,24 +9,32 @@ html, body {
   height: 100%;
   margin: 0;
   background: linear-gradient(120deg, #a077ed 0%, #ffdfba 100%);
-  box-sizing: border-box;
 }
 
-.line {
-  border: 3px solid #333;
-  width: 300px;
-  margin: 0.5em auto;
+h1, .status-label, #msgWrapper > label {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #333;
 }
 
 h1 {
   text-align: center;
-  color: #333;
   padding: 0.25em 0;
+}
+
+.wrapper hr {
+  flex: 1;
+  border: 0;
+  height: 2px;
+  background-image: linear-gradient(90deg, rgba(169,169,169,0.3), rgba(169,169,169,0.7), rgba(169,169,169,0.3));
+  margin: 10px 0.5em 0px;
+  border-radius: 5px;
+  align-items: center;
 }
 
 .wrapper {
   background-color: #fff;
-  list-style-type: none;
+  list-style: none;
   padding: 0.5em;
   border-radius: 5px;
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
@@ -40,7 +46,82 @@ h1 {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 0.25em;
+  padding: 0.25em 0.5em;
+}
+
+.status-container, #msgWrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.status-label {
+  flex: 2;
+  text-align: right;
+  margin-right: 20px;
+}
+
+.status-input, .status {
+  padding: 0.5em;
+  margin: 5px 0;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  border-radius: 10px;
+  font-size: 1.2em;
+  background-color: rgb(242, 248, 248);
+  color: #333;
+}
+
+.status-input {
+  width: calc(40% - 10px);
+  padding: 0.3em;
+  margin: 1px 0;
+  text-align: center;
+  font-weight: bold;
+}
+
+.status {
+  text-align: left;
+  font-weight: bold;
+  width: auto;
+}
+
+#msgWrapper {
+  flex-direction: column;
+  padding: 0.5em;
+  margin: 0 0 0.25em;
+}
+
+#msgWrapper > label {
+  padding: 0.5em;
+}
+
+#msgWrapper > textarea {
+  height: 200px;
+  width: 100%;
+  resize: vertical;
+  background-color: rgb(242, 248, 248);
+  text-align: left;
+  font-weight: bold;
+  font-size: 0.9em;
+  border-radius: 10px;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  margin: 5px 0;
+  padding: 0.5em;
+  color: #333;
+}
+
+.form-row > button, #startButton, #stopButton {
+  padding: 0.5em;
+  margin: 5px 0;
+  border: 0;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  border-radius: 10px;
+  font-size: 1.2em;
+  flex: 1;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  color: white;
 }
 
 #startButton {
@@ -51,58 +132,6 @@ h1 {
   background-color: #ff5722;
 }
 
-.form-row > button {
-  padding: 0.5em;
-  margin: 5px 0;
-  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
-  border-radius: 10px;
-  font-size: 1.2em;
-  color: white;
-  border: 0;
-  flex: 1;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
 .form-row > button:hover {
   opacity: 0.9;
-}
-
-#msgWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0.5em;
-  margin: 0.5em 0;
-}
-
-#msgWrapper > label {
-  padding: 0.5em;
-  font-size: 1.2em;
-  font-weight: bold;
-  color: #333;
-}
-
-#msgWrapper > textarea,
-.status {
-  padding: 0.5em;
-  resize: vertical;
-  margin: 5px 0;
-  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
-  border-radius: 10px;
-  font-size: 1.2em;
-  background-color: rgb(242, 248, 248);
-  text-align: center;
-  width: 100%;
-}
-
-#msgWrapper > textarea {
-  height: 200px; /* Reduced height */
-}
-
-.status {
-  font-size: 1.2em;
-  color: #333;
-  font-weight: bold;
 }
